# ludometrics

./: .gitignore  .prettierrc  README.md  pipeline-plan.md  preprocessing.ipynb  pyproject.toml  verify_bayes_avg.py
dataset/: SOURCE.md  bgg_data_documentation.md
notebooks/: 00_preprocessing.ipynb  01_linear_regression.ipynb  02_regression_trees.ipynb  03_random_forest.ipynb  04_lightgbm.ipynb
plan/: ML Plan — Board Game Success Predictor.md  ML Plan — Pre-processing details.md  pipeline.md  pre-processing details.md
results/: commercial_score.md  commercial_score.pkl  quality_score.md  quality_score.pkl
scripts/: format.py  run_notebooks.py
utils/: train_utils.py  train_utils.test.py
