[project]
name = "ludometrics"
version = "0.1.0"
description = "Machine learning models that predict board game success from board game data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
