[project]
name = "ludometrics"
version = "0.1.0"
description = "Machine learning models that predict board game success from board game data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "euporie>=2.10.4",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "nbconvert>=7.0.0",
]
